# PoTensorf

./: .gitignore  README.md  launch_all.sh  pyproject.toml
dataparsers/: blender_free_nerf.py  dataparser_configs.py
pytensorf/: pytensorf.py  pytensorf_config.py  pytensorf_field.py  template_datamanager.py  template_pipeline.py  utils.py
pytensorf/datasets/: create_pols.py  pol_dataset.py
scripts/: debug.sh  different_models_quick_test.sh  instant_ngp_few_shot.sh  model_on_vanilla.sh  pyramid_ablation.sh  pytensorf_few_shot.sh  pytensorf_few_shot_pol_supervision.sh  tensorf_few_shot.sh  tensorf_prime_few_shot.sh
tensorf_few_shot/: template_config.py
